--- a/e-commerce-services/services/config.server/src/main/resources/application.yml
+++ b/e-commerce-services/services/config.server/src/main/resources/application.yml
@@ -2,13 +2,11 @@ spring:
   profiles:
     active: native
   application:
-    name: config-servier
+    name: config-server
   cloud:
     config:
       server:
         native:
-          search-locations: classpath://configurations
-
-
+          search-locations: classpath:/configurations
 server:
   port: 8888
