--- a/e-commerce-services/docker-compose.yml
+++ b/e-commerce-services/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres
     environment:
       POSTGRES_USER: quanghuyfs
-      POSTGRES_PASSWORD: quanghuyfs2002
+      POSTGRES_PASSWORD: quanghuyfs
       PGDATA: /var/lib/postgresql/data
     volumes:
       - postgres:/var/lib/postgresql/data
@@ -51,11 +51,12 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: quanghuyfs
       ME_CONFIG_MONGODB_ADMINPASSWORD: quanghuyfs
-      ME_CONFIG_MONGODB_SERVER: mongodb   # Use the service name 'mongodb' here
+      ME_CONFIG_MONGODB_SERVER: mongodb
     networks:
       - microservices-net
     depends_on:
       - mongodb
+
   mail-dev:
     container_name: ms_mail_dev
     image: maildev/maildev
