--- a/e-commerce-services/services/config.server/src/main/resources/configurations/customer-service.yml
+++ b/e-commerce-services/services/config.server/src/main/resources/configurations/customer-service.yml
@@ -1,9 +1,11 @@
+server:
+  port: 8090
 spring:
   data:
     mongodb:
       username: quanghuyfs
       password: quanghuyfs
       host: localhost
+      port: 27017
       database: customer
       authentication-database: admin
-
