--- a/e-commerce-services/services/config.server/src/main/resources/configurations/gateway-service.yml
+++ b/e-commerce-services/services/config.server/src/main/resources/configurations/gateway-service.yml
@@ -29,6 +29,5 @@ spring:
           uri: lb:http://PAYMENT-SERVICE
           predicates:
             - Path=/api/v1/payments/**
-
-service:
+server:
   port: 8222
