--- a/e-commerce-services/services/config.server/src/main/resources/configurations/notification-service.yml
+++ b/e-commerce-services/services/config.server/src/main/resources/configurations/notification-service.yml
@@ -11,11 +11,12 @@ spring:
       group-id: paymentGroup, orderGroup
       auto-offset-reset: earliest
       bootstrap-servers: localhost:9092
-      properties:
-        spring.json:trusted.packages: '*'
-        spring.json.type.mapping: paymentConfirmation:com.quanghuyfs.ecommerce.payment.notification.PaymentNotificationRequest,orderConfirmation:com.quanghuyfs.ecommerce.kafka.OrderConfirmation
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json:trusted.packages: '*'
+        spring.json.type.mapping: paymentConfirmation:com.quanghuyfs.ecommerce.kafka.payment.PaymentConfirmation,orderConfirmation:com.quanghuyfs.ecommerce.kafka.order.OrderConfirmation
+
   mail:
     host: localhost
     port: 1025
